Fix POM for initial build.